# hdc

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  hpk.txt
img/: haard-logo.xcf  logo.xcf
include/ast/: AST.h  ASTNode.h  AddressOfExpression.h  ArrayExpression.h  ArrowExpression.h  AssignmentExpression.h  AtExpression.h  BinaryOperator.h  BitwiseAndAssignmentExpression.h  BitwiseAndExpression.h  BitwiseNotAssignmentExpression.h  BitwiseNotExpression.h  BitwiseOrAssignmentExpression.h  BitwiseOrExpression.h  BitwiseXorAssignmentExpression.h  BitwiseXorExpression.h  BoolType.h  CallExpression.h  CharType.h  Class.h  ClassVariable.h  CompoundStatement.h  Constant.h  Def.h  DereferenceExpression.h  DivisionAssignmentExpression.h  DivisionExpression.h  DolarExpression.h  DotExpression.h  DoubleType.h  ElifStatement.h  ElseStatement.h  EqualExpression.h  Expression.h  FloatType.h  ForEachStatement.h  ForStatement.h  FunctionType.h  GlobalConstant.h  GlobalVariable.h  (+79 more)
include/ast/operators/binary/: ExclusiveRangeExpression.h  InclusiveRangeExpression.h  LogicalAndExpression.h  LogicalOrExpression.h
include/ast/statements/: VariableDeclarationStatement.h
include/ast/types/: ArrayType.h  BoolType.h  CharType.h  DoubleType.h  FloatType.h  FunctionType.h  Int16Type.h  Int32Type.h  Int64Type.h  IntType.h  LongType.h  NamedType.h  OPERType.h  PointerType.h  PrimitiveType.h  ShortType.h  SymbolType.h  Type.h  UCharType.h  UInt16Type.h  UInt32Type.h  UInt64Type.h  UInt8Type.h  UIntType.h  ULongType.h  UShortType.h  VoidType.h
include/driver/: Driver.h
include/ir/: IR.h  IRFunction.h  IRProgram.h  IRSourceFile.h  ir.h
include/ir/instructions/: IRAdd.h  IRBinaryInstruction.h  IRGoto.h  IRIFz.h  IRInstruction.h  IRLabelDef.h  IRLoadConstant.h  IRLocalVar.h  IRMinus.h  IRStore.h  IRUnaryInstruction.h
include/ir/values/: IRConstant.h  IRLabel.h  IRTemporary.h  IRValue.h
include/lex/: Lex.h
include/logger/: Log.h  Logger.h
include/parser/: Parser.h
include/symtab/: Symbol.h  SymbolTable.h  SymbolTableStack.h
include/tac/: TAC.h  TACAdd.h
include/token/: Token.h
include/util/: Graph.h
include/visitors/: CppPrinter.h  PrettyPrinter.h  SymbolTableBuilderVisitor.h  TACBuilderVisitor.h  TACPrettyPrinter.h  TACVisitor.h  TypeCheckerVisitor.h  Visitor.h
include/visitors/ast/: IRBuilderVisitor.h  IRBuilderVisitor.h.autosave
include/visitors/ir/: IRPrettyPrinter.h  IRVisitor.h
samples/: .cpp01.hd.swp  cpp00-0.hd  cpp00.hd  cpp01.hd  cpp02.hd  cpp03.hd  cpp04.hd  cpp05.hd  cpp06.hd  cpp07.hd  cpp08.hd  cpp10.hd  cpp11.hd  cpp12.hd  cpp13.hd  cpp130.hd  cpp14.hd  cpp15.hd  err00.hd  fizzbuzz.hd  main.hd  moderate01.hd  ppm.hd  ppm2.hd  ppm3.hd  ppm4.hd  ppm5.hd  simple0.hd  simple01.hd  simple02.hd  simple03.hd  simple04.hd  simple05.hd  simple06.hd  simple07.hd
samples/foo/: io.hd
samples/gui/: PPMImage.hd  Pixel.hd
samples/ppm/: PPMImage.hd  Pixel.hd  main.hd  main_err.hd
samples/std/: File.hd  io.hd
samples/system/std/: cstring.hd  io.hd  math.hd  memory.hd
src/: main.cpp
src/ast/: ASTNode.cpp  AddressOfExpression.cpp  ArrayExpression.cpp  ArrowExpression.cpp  AssignmentExpression.cpp  AtExpression.cpp  BinaryOperator.cpp  BitwiseAndAssignmentExpression.cpp  BitwiseAndExpression.cpp  BitwiseNotAssignmentExpression.cpp  BitwiseNotExpression.cpp  BitwiseOrAssignmentExpression.cpp  BitwiseOrExpression.cpp  BitwiseXorAssignmentExpression.cpp  BitwiseXorExpression.cpp  BoolType.cpp  CallExpression.cpp  CharType.cpp  Class.cpp  ClassVariable.cpp  CompoundStatement.cpp  Constant.cpp  Def.cpp  DereferenceExpression.cpp  DivisionAssignmentExpression.cpp  DivisionExpression.cpp  DolarExpression.cpp  DotExpression.cpp  DoubleType.cpp  ElifStatement.cpp  ElseStatement.cpp  EqualExpression.cpp  Expression.cpp  FloatType.cpp  ForEachStatement.cpp  ForStatement.cpp  FunctionType.cpp  GlobalConstant.cpp  GlobalVariable.cpp  GreaterThanExpression.cpp  (+76 more)
src/ast/operators/binary/: ExclusiveRangeExpression.cpp  InclusiveRangeExpression.cpp  LogicalAndExpression.cpp  LogicalOrExpression.cpp
src/ast/statements/: VariableDeclarationStatement.cpp
src/ast/types/: ArrayType.cpp  BoolType.cpp  CharType.cpp  DoubleType.cpp  FloatType.cpp  FunctionType.cpp  Int16Type.cpp  Int32Type.cpp  Int64Type.cpp  Int8Type.cpp  IntType.cpp  LongType.cpp  NamedType.cpp  PointerType.cpp  PrimitiveType.cpp  ShortType.cpp  SymbolType.cpp  Type.cpp  UCharType.cpp  UInt16Type.cpp  UInt32Type.cpp  UInt64Type.cpp  UInt8Type.cpp  UIntType.cpp  ULongType.cpp  UShortType.cpp  VoidType.cpp
src/driver/: Driver.cpp
src/ir/: IRFunction.cpp  IRProgram.cpp  IRSourceFile.cpp
src/ir/instructions/: IRAdd.cpp  IRBinaryInstruction.cpp  IRGoto.cpp  IRIFz.cpp  IRLabelDef.cpp  IRLoadConstant.cpp  IRLocalVar.cpp  IRMinus.cpp  IRStore.cpp  IRUnaryInstruction.cpp
src/ir/values/: IRConstant.cpp  IRLabel.cpp  IRTemporary.cpp  IRValue.cpp
src/lex/: Lex.cpp  Lex.h
src/logger/: Log.cpp  Logger.cpp
src/parser/: Parser.cpp
src/symtab/: Symbol.cpp  SymbolTable.cpp  SymbolTableStack.cpp
src/tac/: TAC.cpp  TACAdd.cpp
src/token/: Token.cpp  Token.h
src/visitors/: CppPrinter.cpp  PrettyPrinter.cpp  SymbolTableBuilderVisitor.cpp  TACBuilderVisitor.cpp  TACPrettyPrinter.cpp  TACVisitor.cpp  TypeCheckerVisitor.cpp  TypeCheckerVisitor.cpp.autosave
src/visitors/ast/: IRBuilderVisitor.cpp
src/visitors/ir/: IRPrettyPrinter.cpp
vim/: hd.vim.syntax
